# ask-answer-test

./: alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt  start.sh
docs/: challenge.md
src/app/: __main__.py  ioc.py
src/app/application/commands/: __init__.py  create_anwser.py  create_question.py  remove_answer.py  remove_question.py
src/app/application/common/: dto.py  exceptions.py  gateway.py
src/app/application/queries/: __init__.py  get_all_answers.py  get_all_questions.py  get_answer.py  get_question.py
src/app/domain/: entities.py
src/app/infrastructure/common/: gateway.py
src/app/infrastructure/models/: answers.py  questions.py
src/app/infrastructure/persistence/: config.py  providers.py
src/app/infrastructure/persistence/alembic/: env.py
src/app/infrastructure/persistence/alembic/versions/: 8709ae550905_add_tables.py
src/app/interface/routes/: answers.py  questions.py
src/app/interface/schemas/: answers.py  questions.py
test/: test_endpoints.py
